# chatgpt_register

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  chatgpt_register.py  config.example.json  profile_manager.py  pyproject.toml
.claude/: gsd-file-manifest.json
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: gsd-debugger.toml  gsd-executor.toml  gsd-phase-researcher.toml  gsd-plan-checker.toml  gsd-planner.toml  gsd-project-researcher.toml  gsd-research-synthesizer.toml  gsd-roadmapper.toml  gsd-verifier.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
chatgpt_register/: __init__.py  cli.py  dashboard.py  wizard.py
chatgpt_register/adapters/: __init__.py  base.py  catchmail.py  duckmail.py  mailcow.py  (+2 more)
codex/: protocol_keygen.py
tests/: conftest.py  test_anti_bot.py  test_archive.py  test_cli_profile_mode.py  test_cli_tui.py  test_config_model.py  test_humanize.py  test_profile_manager.py  test_proxy_parser.py  test_proxy_pool.py  test_sub2api_group_binding.py  test_tui_email_screen.py  test_tui_profile_screen.py  test_tui_registration_screen.py  test_tui_summary_screen.py  test_tui_upload_screen.py  test_wizard_proxy.py
(+111 files in other folders)
