[project]
name = "chatgpt-register"
version = "0.1.0"
description = "Batch ChatGPT registration tool with temporary email providers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "curl-cffi>=0.7.0",
  "pydantic>=2.12,<3",
  "questionary>=2.1.0",
  "rich>=13.7.0",
  "textual>=7.5,<8",
  "tomli-w>=1.2",
]
scripts = { chatgpt-register = "chatgpt_register.cli:main" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chatgpt_register*"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest>=9.0.2",
    "textual-dev>=1.7.0",
]
